# Project-Vision-3D

./: CMakeLists.txt  README.md  peopleClassifier.cpp  tareas.txt
Libreria Editada/people/: ground_based_people_detection_app.h  object_classifier.h  person_cluster.h
Libreria Editada/people/impl/: ground_based_people_detection_app.hpp  object_classifier.hpp  person_cluster.hpp
example-app/: CMakeCache.txt  Makefile  cmake_install.cmake  example-app  example-app.cpp
libraries/: ground_based_object_detection.h  head_based_subcluster.h  height_map_2d.h  objectdetector.h  person_cluster.h
libraries/imp/: ground_based_object_detection.hpp  head_based_subcluster.hpp  height_map_2d.hpp  objectdetector.hpp  person_cluster.hpp
